@@ -23,6 +23,7 @@ osd_lyrics_SOURCES = \
 	ol_about.c \
 	ol_option.c \
 	ol_osd_window.c \
+	ol_osd_toolbar.c \
 	ol_osd_render.c \
 	ol_osd_module.c \
 	ol_image_button.c \
